# imo2025

./: CLAUDE.md  README.md  agent_controller.py  pyproject.toml
context/: example_architecture.md
prompts/: README.md  solver_prompt.md  verifier_prompt.md
